--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
 <body>
   <div id="app"></div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdn.ckeditor.com/4.6.2/standard/ckeditor.js"></script>
+  <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-  <script src="./bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
