feature(client, server): add jsdocs and properly format codes
[#146144825]

--- a/api_docs/index.html
+++ b/api_docs/index.html
@@ -194,38 +194,38 @@
 .highlight .o {
   color: #f92672;
 }
-   </style>
-     <link href="../api_docs/stylesheets/screen.css" rel="stylesheet" media="screen" />
-     <link href="../api_docs/stylesheets/print.css" rel="stylesheet" media="print" />
-       <script src="../api_docs/javascripts/all.js"></script>
-   </head>
+    </style>
+      <link href="../api_docs/stylesheets/screen.css" rel="stylesheet" media="screen" />
+      <link href="../api_docs/stylesheets/print.css" rel="stylesheet" media="print" />
+        <script src="../api_docs/javascripts/all.js"></script>
+    </head>
 
-   <body class="index" data-languages="[&quot;javascript&quot;]">
-     <a href="#" id="nav-button">
-       <span>
-         NAV
-         <img src="../api_docs/images/navbar.png" alt="Navbar" />
-       </span>
-     </a>
-     <div class="tocify-wrapper">
-       <img src="../api_docs/images/logo.png" alt="Logo" />
-         <div class="lang-selector">
-               <a href="#" data-language-name="javascript">javascript</a>
-         </div>
-         <div class="search">
-           <input type="text" class="search" id="input-search" placeholder="Search">
-         </div>
-         <ul class="search-results"></ul>
-       <div id="toc">
-       </div>
-         <ul class="toc-footer">
-             <li><span>&copy; Andela, developed by Anthony Ngene</span></li>
-         </ul>
-     </div>
-     <div class="page-wrapper">
-       <div class="dark-box"></div>
-       <div class="content">
-         <h1 id="introduction">Introduction</h1>
+    <body class="index" data-languages="[&quot;javascript&quot;]">
+      <a href="#" id="nav-button">
+        <span>
+          NAV
+          <img src="../api_docs/images/navbar.png" alt="Navbar" />
+        </span>
+      </a>
+      <div class="tocify-wrapper">
+        <img src="../api_docs/images/logo.png" alt="Logo" />
+          <div class="lang-selector">
+                <a href="#" data-language-name="javascript">javascript</a>
+          </div>
+          <div class="search">
+            <input type="text" class="search" id="input-search" placeholder="Search">
+          </div>
+          <ul class="search-results"></ul>
+        <div id="toc">
+        </div>
+          <ul class="toc-footer">
+              <li><span>&copy; Andela, developed by Anthony Ngene</span></li>
+          </ul>
+      </div>
+      <div class="page-wrapper">
+        <div class="dark-box"></div>
+        <div class="content">
+          <h1 id="introduction">Introduction</h1>
 
 <p>Document Management System API contains several API end points that allows users to create, edit, retrieve and delete documents. It also offers a way to ensure that only authorized users can perform certain operations.</p>
 
@@ -235,7 +235,7 @@
 
 <h2 id="installation">Installation</h2>
 
-<p>Follow the steps below to setup a local development environment. First ensure you have <a href="https://www.postgresql.org/">Postgresql</a> installed, and a version of <a href="http://nodejs.org/">Node.js</a> equal or greater than v6.8.0.</p>
+<p>Follow the steps below to setup a local development environment. First ensure you have <a href="https://www.postgresql.org/">Postgresql</a> installed, and a version of <a href="http://nodejs.org/">Node.js</a> equal or greater than v6.10.0.</p>
 
 <ol>
 <li>Clone the repository from a terminal <code class="prettyprint">git clone https://github.com/andela-angene/document-management-system.git</code>.</li>
@@ -428,7 +428,6 @@
   <span class="s2">"fullName"</span><span class="p">:</span> <span class="s2">"Kenpachi Zaraki"</span><span class="p">,</span>
   <span class="s2">"email"</span><span class="p">:</span> <span class="s2">"bosskp@bleach.com"</span><span class="p">,</span>
   <span class="s2">"password"</span><span class="p">:</span> <span class="s2">"bankai!"</span><span class="p">,</span>
-  <span class="s2">"roleId"</span><span class="p">:</span> <span class="mi">2</span><span class="p">,</span>
   <span class="s2">"about"</span><span class="p">:</span> <span class="s2">"Kenpachi Zaraki is a fictional character and an antihero"</span>
 <span class="p">}</span>
 </code></pre>
@@ -1120,6 +1119,10 @@
 <li>Status: <code class="prettyprint">200: OK</code></li>
 <li>Body <code class="prettyprint">(application/json)</code></li>
 </ul>
+
+<aside class="success">
+Thanks for reading this doc, Enjoy the <a href="http://doc-mage.herokuapp.com/">app!</a>
+</aside>
 
       </div>
       <div class="dark-box">
